# reader-toolbox

./: .gitignore  README-BBEditPreviewTemp.md.html  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
completions/: rdr.bash  rdr.zsh
docs/: commands.rst  conf.py  definitions.rst  dhq-bibliography.txt  exercise_02-introduction.rst  exercise_03-building_carrrels.rst  exercise_04-word_clouds.rst  exercise_07-network_graphs.rst  gui.rst  helpers.rst  index.rst  installation.rst  introduction.rst  quick-start.rst  quicker-start.rst  quickest-start.rst  quips.rst  software.rst  structure.rst  tutorial.rst  usecase-collocations.rst  usecase-tm.rst
libexec/: rdr  rdr-checkout  rdr-cluster  rdr-commands  rdr-completions  rdr-concordance  rdr-env  rdr-features  rdr-hangman  rdr-help  rdr-index  rdr-info  rdr-init  rdr-list  rdr-makebook  rdr-model-build  rdr-model-report  rdr-model-use  rdr-ngrams  rdr-read  rdr-search  rdr-txt2graph
notebooks/: 00-gentle-introduction.ipynb  000-preface.ipynb  001-introduction-part-i.ipynb  005-introduction.ipynb  010-catalog-reader-library.ipynb  015-ngrams.ipynb  02-getting-started.ipynb  02-rudimentary.ipynb  020-download.ipynb  021-catalog-your-library.ipynb  022-sizes.ipynb  023-readability.ipynb  024-bibliographics.ipynb  025-urls.ipynb  026-email-addresses.ipynb  03-frequencies.ipynb  030-parts-of-speech.ipynb  035-named-entities.ipynb  036-keywords.ipynb  038-concordance.ipynb  039-search.ipynb  04-parts-of-speech.ipynb  05-word-clouds.ipynb  06-feature-extraction-with-textacy.ipynb  07-sql.ipynb  08-catalog.ipynb  (+49 more)
(+182 files in other folders)
