[metadata]
name = rdr-pkg-ericleasemorgan
version = 0.1.01
author = Eric Lease Morgan
author_email = emorgan@nd.edu
description = Distant Reader Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ericleasemorgan/reader-toolbox
project_urls = Bug Tracker = https://github.com/ericleasemorgan/reader-toolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
