[metadata]
name = reader-toolbox
version = 0.0.95
author = Eric Lease Morgan
author_email = emorgan@nd.edu
description = A command-line interface for interacting with Distant Reader study carrels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ericleasemorgan/reader-toolbox
project_urls = Bug Tracker = https://github.com/ericleasemorgan/reader-toolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
